@@ -8,15 +8,13 @@
   \code{\link{detrend}}.
 }
 \usage{
-chron(x, prefix = "xxx", biweight = TRUE, prewhiten = FALSE, \dots)
+chron(x, biweight = TRUE, prewhiten = FALSE, \dots)
 }
 \arguments{
   \item{x}{a \code{data.frame} of (usually detrended) ring widths with
     \code{rownames(\var{x})} containing years and \code{colnames(x)}
     containing each series \acronym{ID} such as produced by
     \code{\link{read.rwl}}}
-  \item{prefix}{a \code{character} string with less than 4
-    characters.  Defaults to \code{"xxx"}}
   \item{biweight}{\code{logical} flag.  If \acronym{TRUE} then a robust
     mean is calculated using \code{\link{tbrm}.}}
   \item{prewhiten}{\code{logical} flag.  If \acronym{TRUE} each series is
@@ -29,6 +27,10 @@ chron(x, prefix = "xxx", biweight = TRUE, prewhiten = FALSE, \dots)
   This either averages the rows of the \code{data.frame} using a mean or
   a robust mean (the so-called standard chronology) or can do so from
   the residuals of an AR process (the residual chronology).
+  
+  Note that the residual chronology in this function will return different
+  values than the residual chronology from \code{\link{chron.ars}} which uses
+  a slightly different method for determining AR order.
 }
 \value{
   A \code{data.frame} with the standard chronology, residual chronology (if
@@ -50,9 +52,10 @@ chron(x, prefix = "xxx", biweight = TRUE, prewhiten = FALSE, \dots)
 library(utils)
 data(ca533)
 ca533.rwi <- detrend(rwl = ca533, method = "ModNegExp")
-ca533.crn <- chron(ca533.rwi, prefix = "CAM")
+ca533.crn <- chron(ca533.rwi)
 plot(ca533.crn,xlab="Year",ylab="RWI")
 ## With residual chron
-ca533.crn <- chron(ca533.rwi, prefix = "CAM", prewhiten = TRUE)
+ca533.crn2 <- chron(ca533.rwi, prewhiten = TRUE)
+plot(ca533.crn2,xlab="Year",ylab="RWI")
 }
 \keyword{ manip }
