@@ -98,7 +98,7 @@ wavelet.plot(wave.list,
 library(utils)
 data(ca533)
 ca533.rwi <- detrend(rwl = ca533, method = "ModNegExp")
-ca533.crn <- chron(ca533.rwi, prefix = "CAM", prewhiten = FALSE)
+ca533.crn <- chron(ca533.rwi, prewhiten = FALSE)
 Years <- time(ca533.crn)
 CAMstd <- ca533.crn[, 1]
 out.wave <- morlet(y1 = CAMstd, x1 = Years, p2 = 9, dj = 0.1,
